fix(portfolio): start every range where its curve starts and divide by what was there
The change over a range now starts at the date the constant-mix curve
starts, so it always equals the curve's last point minus its first, and
max no longer mixes start dates. The ratio divides by the start value of
the lines that had one, here and in /portfolio's day ratio. Performance
reuses the portfolio valuation and reads first-quote dates in one query.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QTCwn9LZmqfbnx3scEFn8j